# alpaca-data-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  github-pages.yml
benches/: crypto.rs  news_corporate_actions.rs  options.rs  shared_core.rs  stocks.rs
docs/: api-coverage.md  authentication.md  examples.md  getting-started.md  index.md  layers.md  project-structure.md  release-checklist.md
docs/reference/: client.md  common.md  corporate-actions.md  crypto.md  index.md  news.md  options.md  stocks.md  transport.md
examples/: client_builder.rs  corporate_actions_list.rs  crypto_latest_quotes.rs  news_list.rs  options_chain.rs  stocks_bars_all.rs  stocks_latest_bar.rs
memory/: README.md
memory/api/: README.md
memory/core/: invariants.md  symptom-routing.md  system-map.md  workflows.md
scripts/: api-sync-audit  api-sync-openapi
src/: auth.rs  client.rs  env.rs  error.rs  lib.rs
src/common/: decimal.rs  enums.rs  mod.rs  query.rs  response.rs  time.rs  validate.rs
src/corporate_actions/: client.rs  mod.rs  model.rs  request.rs  response.rs
src/crypto/: client.rs  enums.rs  mod.rs  model.rs  request.rs  response.rs
src/news/: client.rs  mod.rs  model.rs  request.rs  response.rs
src/options/: client.rs  enums.rs  mod.rs  model.rs  request.rs  response.rs
src/stocks/: client.rs  enums.rs  mod.rs  model.rs  request.rs  response.rs
tests/: api_sync_scripts.rs  client_builder.rs  decimal_precision.rs  decimal_type_paths.rs  doc_site_generation.rs  live_corporate_actions.rs  live_crypto_historical.rs  live_crypto_latest.rs  live_crypto_latest_quotes_smoke.rs  live_crypto_loc_variants.rs  live_crypto_snapshots.rs  live_news.rs  live_options_condition_codes.rs  live_options_historical.rs  live_options_latest_metadata.rs  live_options_snapshots_chain.rs  live_stocks_auctions.rs  live_stocks_batch_historical.rs  live_stocks_latest_snapshot.rs  live_stocks_metadata.rs  live_stocks_single_historical.rs  mock_crypto_errors.rs  mock_news_corporate_actions_errors.rs  mock_options_errors.rs  mock_stocks_errors.rs  mock_transport_errors.rs  public_api.rs  request_validation.rs
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+27 files in other folders)
