[package]
name = "alpaca-data"
version = "0.3.3"
edition = "2024"
rust-version = "1.85"
description = "High-performance Rust client for Alpaca Market Data API"
readme = "README.md"

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support", "async_tokio"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
wiremock = "0.6"

[[bench]]
name = "shared_core"
harness = false

[[bench]]
name = "stocks"
harness = false

[[bench]]
name = "options"
harness = false
